--- a/GCCBlinky.cproject.yml
+++ b/GCCBlinky.cproject.yml
@@ -2,7 +2,7 @@
 project:
   components:
     - component: ARM::CMSIS:CORE@5.5.0
-    - component: ARM::CMSIS:RTOS:Keil RTX@4.82.0
+    - component: ARM::CMSIS:RTOS2:Keil RTX5&Library@5.5.3
     - component: ARM::Device:Startup&C Startup@2.0.3
   groups:
     - group: Source Files
